--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 src/files/Atualização Empresarial 07.12.2025/BitmaxMovimento.exe
 src/files/Atualização Empresarial 02.01.2026/BitmaxMovimento.exe
+src/files/Atualização Empresarial 05.01.2026/BitmaxMovimento.exe
