--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ src/files/Atualização Empresarial 02.01.2026/BitmaxMovimento.exe
 src/files/Atualização Empresarial 05.01.2026/BitmaxMovimento.exe
 src/files/Atualização Empresarial 07.01.2026/BitmaxMovimento.exe
 src/files/Atualização Empresarial 08.01.2026/BitmaxMovimento.exe
+src/files/Atualização Empresarial 13.01.2026/BitmaxMovimento.exe
